--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,40 @@
     padding: 0;
     box-sizing: border-box;
 }
-:root{
-    --blue:#0084fd;
-}
+
+
 .debug{
-    border: 1px solid black;
+    border: 2px solid black;
 }
 .debug-topbar{
     width: 100%;
     height: 80px;
 }
+/* .debug.debug-container{
+height: 500px;
+} */
+.debug.debug-first-col{
+    height: 200px;
+}
+
+
+
+
+:root{
+    --blue:#0084fd;
+    --lightblue:#b5ddff
+}
 .container{
-    width:75%;
+    width:70%;
     margin:0 auto;
+    border: 1px solid green;
+}
+.first.container{
+    width:70%;
+
+}
+.second.container{
+    width:80%;
 }
 .flex{
     display: flex;
@@ -36,6 +57,19 @@
 
 
 /* MAIN */
+main{
+    padding: 80px 0;
+}
+section:first-child .row:first-child{
+    margin:30px 0 10px 0;  
+}
+section:first-child .row{
+    background-color: var(--lightblue);
+    border-radius: 10px;
+    margin-bottom:10px;  
+    flex-direction: column ;
+    border: 1px solid red;
+}
 
 /* /MAIN */
 
