--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,11 @@
     width: 100%;
     height: 80px;
 }
-/* .debug.debug-container{
-height: 500px;
-} */
 .debug.debug-first-col{
     height: 200px;
+}
+.debug.debug-col{
+    height: 250px;
 }
 
 
@@ -52,6 +52,7 @@ height: 500px;
     height: 80px;
     width: 100%;
     position: fixed;
+    z-index: 999;
 }
 /* /HEADER */
 
@@ -60,13 +61,13 @@ height: 500px;
 main{
     padding: 80px 0;
 }
-section:first-child .row:first-child{
-    margin:30px 0 10px 0;  
+section:first-child .container:first-child .row:first-child{
+    margin:30px 0 20px 0;  
 }
 section:first-child .row{
     background-color: var(--lightblue);
     border-radius: 10px;
-    margin-bottom:10px;  
+    margin-bottom:20px;  
     flex-direction: column ;
     border: 1px solid red;
 }
