--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 .debug-topbar{
     width: 100%;
-    height: 80px;
+    height: 60px;
 }
 .debug.debug-first-col{
     height: 200px;
@@ -34,16 +34,17 @@
     --white:#ffffff;
 }
 .container{
-    width:70%;
     margin:0 auto;
     border: 1px solid green;
 }
 .first.container{
-    width:70%;
+    width: 280px;
+    
 
 }
 .second.container{
-    width:80%;
+    width: 230px;
+
 }
 .flex{
     display: flex;
@@ -62,7 +63,7 @@
 
 .topbar{
     background-color:var(--blue) ;
-    height: 80px;
+    height: 60px;
     width: 100%;
     position: fixed;
     z-index: 999;
@@ -72,7 +73,7 @@
 
 /* MAIN */
 main{
-    padding: 80px 0;
+    padding: 60px 0;
 }
 section:first-child .container:first-child .row:first-child{
     margin:30px 0 20px 0;  
