--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,9 @@
 main{
     padding: 60px 0;
 }
+
+/* 1° SECTION */
+
 section:first-child .container:first-child .row:first-child{
     margin:30px 0 20px 0;  
 }
@@ -83,6 +86,9 @@ section:first-child .row{
     margin-bottom:20px;  
     border: 1px solid red;
 }
+
+/* 2° SECTION */
+
 section:nth-child(2){
     background-color: var(--violet);    
     margin-top: 30px;
@@ -95,13 +101,18 @@ section:nth-child(2) .row:nth-child(2){
     background-color:var(--white) ;
 
 }
-section:nth-child(3) .row:nth-child(2){
+
+/* 3° SECTION */
+
+section:nth-child(3) .row:not(.row:first-child){
     background-color:var(--violet) ;
+    margin-top:30px ;
 
 }
-section:nth-child(3) .row:nth-child(2) .col:first-child{
-    margin-top: 20px;
+section:nth-child(3) .row:not(.row:first-child) .col:first-child{
+    margin: 50px;
 }
+
 
 /* /MAIN */
 
