--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ section:nth-child(3) .row:not(.row:first-child) .col:first-child{
     margin: 50px;
 }
 
-/* 4°SECTION */
+/* 4° SECTION */
 
 section:nth-child(4){
     background-color:var(--violet) ;
@@ -126,6 +126,11 @@ section:nth-child(4) .row:not(.row:first-child){
     background-color:var(--white) ;
     margin:30px 0 ;
 
+}
+
+/* 5° SECTION */
+section:nth-child(5) .row{
+    margin: 30px 0;
 }
 
 /* /MAIN */
