--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
     --lightblue:#b5ddff;
     --violet:#9792e4;
     --white:#ffffff;
+    --black:#333333;
 }
 .container{
     margin:0 auto;
@@ -76,7 +77,7 @@
 
 /* MAIN */
 main{
-    padding: 60px 0;
+    padding-top: 60px;
 }
 
 /* 1° SECTION */
@@ -132,10 +133,20 @@ section:nth-child(4) .row:not(.row:first-child){
 section:nth-child(5) .row{
     margin: 30px 0;
 }
+/* 6° SECTION */
+
+section:nth-child(6){
+    background-color:var(--violet) ;
+
+}
+
 
 /* /MAIN */
 
-
 /* FOOTER */
+
+footer{
+    background-color:var(--black);
+}
 
 /* /FOOTER */
