--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
 .flex{
     display: flex;
 }
-.direction-column{
+.direction{
     flex-direction: column ;
 }
 .space-between{
@@ -150,3 +150,11 @@ footer{
 }
 
 /* /FOOTER */
+
+@media screen and (min-width:768px) {
+    .first.container{
+        width: 700px;
+    }
+
+
+}
