--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ body{
     border: 1px solid green;    
     max-width: 280px;
 }
-a {
+header a,
+main a {
     text-decoration: none;
     font-weight: 700;
     color: var(--white);
