--- a/css/style.css
+++ b/css/style.css
@@ -160,25 +160,36 @@ section:nth-child(2) .row:first-child{
     color: var(--white);
 
 }
-section:nth-child(2) .row:first-child h2{
-    margin: 40px;
-
-}
-section:nth-child(2) .row:last-child h2{
-    margin: 15px;
-
-}
 section:nth-child(2) .row:nth-child(2){
     background-color:var(--white) ;
     padding: 25px;
 
 }
+section:nth-child(2) .row:first-child h2{
+    margin: 40px 0;
+
+}
+section:nth-child(2) .row:last-child h2{
+    margin: 15px 0;
+    text-align: center;
+
+}
+section:nth-child(2) .row:last-child p{
+    text-align: center;
+
+}
+section:nth-child(2) .row:last-child .col{
+    text-align: center;
+
+}
+
 section:nth-child(2) .link{
     width: 40px; 
     height: 40px;
     background-color: var(--violet);
     border-radius:50% ;
-    margin: 50px;
+    margin: 50px 0;
+
 }
 section:nth-child(2) .link i {
     color: var(--black);
