--- a/css/style.css
+++ b/css/style.css
@@ -272,10 +272,27 @@ section:nth-child(4) .cards .link{
 }
 
 /* 5° SECTION */
+section:nth-child(5){
+    margin: 50px 0;    
+    line-height: 40px;
+}
 section:nth-child(5) .row{
     margin: 30px 0;
 }
+section:nth-child(5) h1{
+    color: var(--violet);
+}
+section:nth-child(5) .text{
+    margin: 30px 0 50px 0;
+
+    
+}
+section:nth-child(5) .text p:first-child{
+    margin-bottom: 50px;
+    
+}
 section:nth-child(5) .link{
+    margin: 25px 0;
     width: 200px;
     background-color: var(--violet);
 }
