--- a/css/style.css
+++ b/css/style.css
@@ -346,22 +346,28 @@ footer a{
 
 @media screen and (min-width:769px) {
     .container{
-        max-width: 700px;
-    }
-    section:first-child .card{
-        width: calc(100% / 3); 
-    }
-    section:first-child .card:first-child{
-        width: calc(100% / 2);
-        display: flex;
-    }
- 
-    section:first-child .direction{
-        flex-direction: row;
+        max-width: 700px;       
         flex-wrap: wrap;        
         justify-content: space-between;
+        flex-direction: row;
     }
-    section:nth-child(3) .direction {
+    section:first-child .card{
+        width:30%; 
+    }
+    section:first-child .card:first-child{
+        width:65%;
+    }
+    section:nth-child(2) .row:first-child h2{
+        font-size: 50px;
+        
+
+    }
+    section:nth-child(2) .row img{
+        height: 100%;
+        
+
+    }
+    section:nth-child(3) .direction{
         flex-direction: row;
 
     }
@@ -383,7 +389,7 @@ footer a{
 
 }
 
-@media screen and (min-width:1201px){
+@media screen and (min-width:1401px){
     .container{
         width: 1200px;
     }
